fixed full name spacing

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -89,9 +89,8 @@ h3 {
   font-family: Optima-Bold;
   font-size: 24px;
   color: #000000;
-  letter-spacing: 2.29px;
+  letter-spacing: 10.29px;
   line-height: 29px;
-  text-shadow: 0px 6px 4px rgba(0,0,0,0.50);
 }
 a {
   color : #FFF
@@ -115,7 +114,7 @@ display: inline-block;
   text-align: center;
   position: absolute;
   top: 660px;
-  left: 510px;
+  left: 410px;
 }
 /* Navigation =============
  */
